--- a/festvox.org/blizzard/blizzard2011_body.html
+++ b/festvox.org/blizzard/blizzard2011_body.html
@@ -15,7 +15,7 @@ The Blizzard Challenge 2010 workshop was held 2nd September 2011,  It was hosted
 </p>
 
 <ul>
-<li>"The Blizzard Challenge 2011", Simon King and Vasilis Karaiskos (CSTR, University of Edinburgh, UK) <a href="bc2011/summary_Blizzard2011.pdf">PDF</a> (NOT YET PUBLISHED)
+<li>"The Blizzard Challenge 2011", Simon King and Vasilis Karaiskos (CSTR, University of Edinburgh, UK) <a href="bc2011/summary_Blizzard2011.pdf">PDF</a>
 </li>
 
 <li>"The GlottHMM Speech Synthesis Entry for Blizzard Challenge 2011: Utilizing Source Unit Selection in HMM-Based Speech Synthesis for Improved Excitation Generation", Antti Suni, Tuomo Raitio, Martti Vainio, Paavo Alku   (Department of Speech Sciences, University of Helsinki, Helsinki, Finland / Department of Signal Processing and Acoustics, Aalto University, Espoo, Finland)
