--- a/festvox.org/blizzard/index_body.html
+++ b/festvox.org/blizzard/index_body.html
@@ -21,10 +21,11 @@ synthetic voice from the data and synthesize a prescribed set of test
 sentences.  The sentences from each synthesizer will then be evaluated
 through listening tests.
 </p><p>
-Blizzard Challenge 2012 is current under development.
+Blizzard Challenge 2013 is current under development.
 </p><p>
 Results from previous Challenges:
 <ul>
+<li><a href="blizzard2012.html">Blizzard Challenge 2012</a> papers and results </li>
 <li><a href="blizzard2011.html">Blizzard Challenge 2011</a> papers and results </li>
 <li><a href="blizzard2010.html">Blizzard Challenge 2010</a> papers and results </li>
 <li><a href="blizzard2009.html">Blizzard Challenge 2009</a> papers and results </li>
