--- a/festvox.org/blizzard/sidebar.html
+++ b/festvox.org/blizzard/sidebar.html
@@ -10,6 +10,7 @@
   <a href="../festival/index.html"> <b>Festival&nbsp;Download</b></a><br>
   <HR>
   <a href="index.html"> <b>Blizzard&nbsp;Challenge</b></a><br>
+  <a href="blizzard2012.html"> <b>Blizzard&nbsp;Challenge&nbsp;2012</b></a><br>
   <a href="blizzard2011.html"> <b>Blizzard&nbsp;Challenge&nbsp;2011</b></a><br>
   <a href="blizzard2010.html"> <b>Blizzard&nbsp;Challenge&nbsp;2010</b></a><br>
   <a href="blizzard2009.html"> <b>Blizzard&nbsp;Challenge&nbsp;2009</b></a><br>
